# potfolio

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  QUICK_START.md  README.md  TESTING_GUIDE.md  TEST_COVERAGE_ANALYSIS.md  directus_schema_snapshot.yaml  docker-compose.prod.yml  docker-compose.yml  index.html  init-multiple-dbs.sh  new-tech.md  new.md  nginx.conf  run-all-tests.sh  run-tests.sh  setup-directus-permissions.js  setup-gcp.sh  start-services.sh
.claude/: settings.local.json
backend/: .gitignore  Dockerfile  Dockerfile.prod  README.md  package.json  pyproject.toml
backend/config/: database.js  plugins.js
backend/portfolio/: settings.py  test_runner.py  urls.py
backend/portfolio/core/: __init__.py  admin.py  auth_views.py  models.py  serializers.py  test_create_placeholder_data.py  test_enhanced.py  test_placeholder_data.py  test_views.py  tests.py  urls.py  views.py
backend/portfolio/core/management/commands/: create_admin_user.py  create_placeholder_data.py
backend/portfolio/core/migrations/: 0001_initial.py  0002_service_slug.py  0003_generate_service_slugs.py  0004_service_slug_unique.py  0005_add_arabic_fields.py
backend/src/api/blog-post/content-types/blog-post/: schema.json
backend/src/api/category/content-types/category/: schema.json
backend/src/api/project/content-types/project/: schema.json
backend/src/api/service/content-types/service/: schema.json
backend/src/extensions/users-permissions/content-types/user/: schema.json
docs/: Portfolio.md  plan.md
frontend/: ADMIN-README.md  Dockerfile  index.html  (+11 more)
(+211 files in other folders)
